--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,7 @@
   </head>
 
   <body>
-    <main>
-      <section class="panel">
-        <img src="img/seven.png" alt="" />
-        <div class="stop">STOP</div>
-      </section>
-      <section class="panel">
-        <img src="img/seven.png" alt="" />
-        <div class="stop">STOP</div>
-      </section>
-      <section class="panel">
-        <img src="img/seven.png" alt="" />
-        <div class="stop">STOP</div>
-      </section>
-    </main>
+    <main></main>
     <div id="spin">SPIN</div>
   </body>
   <script src="js/main.js"></script>
