add: enabling web3 of metamask

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <main></main>
   <div id="spin">SPIN</div>
 </body>
+<script src="js/web3-by-metamask.js"></script>
 <script src="js/main.js"></script>
 
 </html>
